results/SVCOMP/4-shot/log-assert2-2024_03_18_06_19_11.txt
import java.util.Random;

class assert2 {
    //@ ensures \random_int >= 0 && \random_int <= Integer.MAX_VALUE;
    public static void main() {
        int i = new Random().nextInt();

        //@ assert i >= 0;
        if (i >= 1000) assert i > 1000 : "i is greater 1000";
    }
}
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: This backslash token is unknown: \random_int
    //@ ensures \random_int >= 0 && \random_int <= Integer.MAX_VALUE;
                ^
/home/max/Documents/JMLGPT/tmp/assert2.java:4: error: This backslash token is unknown: \random_int
    //@ ensures \random_int >= 0 && \random_int <= Integer.MAX_VALUE;
                                    ^
2 errors

